<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_sort"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/option_sort_default"
                    android:orderInCategory="1"
                    android:title="@string/sort_default"
                    android:icon="@drawable/ic_history_black_24dp"
                    app:showAsAction="ifRoom">
                </item>
                <item
                    android:id="@+id/option_sort_date_asc"
                    android:orderInCategory="1"
                    android:title="@string/sort_date"
                    android:icon="@drawable/ic_sort_asc_black_24dp"
                    app:showAsAction="ifRoom">
                </item>
                <item
                    android:id="@+id/option_sort_price_asc"
                    android:orderInCategory="2"
                    android:title="@string/sort_price"
                    android:icon="@drawable/ic_sort_asc_black_24dp"
                    app:showAsAction="ifRoom">
                </item>
                <item
                    android:id="@+id/option_sort_date_desc"
                    android:orderInCategory="3"
                    android:title="@string/sort_date"
                    android:icon="@drawable/ic_sort_desc_black_24dp"
                    app:showAsAction="ifRoom">
                </item>
                <item
                    android:id="@+id/option_sort_price_desc"
                    android:orderInCategory="4"
                    android:title="@string/sort_price"
                    android:icon="@drawable/ic_sort_desc_black_24dp"
                    app:showAsAction="ifRoom">
                </item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/option_rate"
        android:orderInCategory="1"
        android:title="@string/rate_usd"
        app:showAsAction="ifRoom">
    </item>
</menu>
